--- a/index.css
+++ b/index.css
@@ -10,12 +10,29 @@
   font-family: Gotham-Black;
   src: url(./font/Gotham-Black.otf) format("truetype");
 }
+@font-face {
+  font-family: Prompt-Bold;
+  src: url(./font/Prompt-Bold.ttf) format("truetype");
+}
+@font-face {
+  font-family: Prompt-BoldItalic;
+  src: url(./font/Prompt-BoldItalic.ttf) format("truetype");
+}
 * {
-  margin: 0;
+  margin: 0%;
   padding: 0%;
   box-sizing: border-box;
 }
-
+#container {
+  padding: 1%;
+  background-color: #eaeaea;
+  display: grid;
+  justify-items: center;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
 #nav {
   background-color: #046091;
   display: grid;
@@ -81,9 +98,9 @@
 .nav-hr {
   height: 6px;
   margin: 1% 0% 1% 0%;
-    background: -webkit-linear-gradient(10deg, #f86168, #feac40);
-    border-radius: 5px;
-    opacity: 100%;
+  background: -webkit-linear-gradient(10deg, #f86168, #feac40);
+  border-radius: 5px;
+  opacity: 100%;
 }
 .nav-d2-d2 {
   display: flex;
@@ -107,18 +124,6 @@
   font-family: Prompt-Italic, sans-serif;
   color: white;
   font-size: 1.2rem;
-}
-#container {
-  background-color: aliceblue;
-  display: grid;
-  justify-items: center;
-  /* align-items: center; */
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  /* grid-auto-rows: 200px; */
-  /* grid-auto-rows: minmax(100px, auto); */
 }
 
 .one {
@@ -188,6 +193,48 @@
   grid-row: 4 / 3;
 }
 
+.item_one-title {
+  margin-top: -7%;
+  font-family: Prompt-Bold;
+  font-size: calc(4.1vw + 1vh);
+  background: -webkit-linear-gradient(63deg, #046091, #62e4e2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.item_one-d1 {
+  display: flex;
+}
+.item_one-d1-text1 {
+  padding-left: 2.8%;
+  margin-top: -1%;
+}
+.item_one-subtext1 {
+  font-family: Prompt-ExtraBold, sans-serif;
+  font-size: calc(0.77vw + 0.4vh);
+  border-bottom: 2px solid transparent;
+  border-image-slice: 1;
+  border-width: 5px;
+  border-image-source: linear-gradient(to right, #046091, #62e4e2);
+}
+.item_one-subtext2 {
+  font-family: Prompt-Italic;
+  font-size: calc(0.65vw + 0.4vh);
+  line-height: 0.9;
+  padding-top: 4%;
+}
+.item_one-subtext3 {
+  margin-top: -8%;
+  font-family: Prompt-Bold;
+  font-size: calc(1.9vw + 1vh);
+  background: -webkit-linear-gradient(63deg, #046091, #62e4e2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.item_one-subtext4 {
+  font-family: Prompt-Italic;
+  font-weight: bold;
+  margin-top: -5%;
+}
 @media (max-width: 800px) {
   #container {
     grid-template-columns: 1fr;
