--- a/index.css
+++ b/index.css
@@ -18,6 +18,15 @@
   font-family: Prompt-BoldItalic;
   src: url(./font/Prompt-BoldItalic.ttf) format("truetype");
 }
+@font-face {
+  font-family: Prompt-SemiBold;
+  src: url(./font/Prompt-SemiBold.ttf) format("truetype");
+}
+@font-face {
+  font-family: Prompt-Regular;
+  src: url(./font/Prompt-Regular.ttf) format("truetype");
+}
+
 * {
   margin: 0%;
   padding: 0%;
@@ -158,15 +167,21 @@
   background-color: #ffffff;
   grid-column: 3 / 4;
   grid-row: 1 / 3;
+  width: 100%;
+  padding: 3%;
+  border-radius: 15px;
+  height: max-content;
 }
 
 .four {
   grid-column-start: 4;
   grid-row: 1 / 3;
+  width: 100%;
+  height: max-content;
+
 }
 
 .five {
-  /* background-color: #ffffff; */
   grid-column-start: 1;
   grid-row: 2 / 3;
 }
@@ -182,15 +197,17 @@
 }
 
 .eight {
-  /* background-color: #ffffff; */
   grid-column: 4 / 5;
   grid-row: 3 / 3;
+  width: 100%;
+  margin-top: -20%;
+  height: max-content;
 }
 
 .nine {
-  /* background-color: #ffffff; */
   grid-column-start: 1;
   grid-row: 4 / 3;
+  width: 100%;
 }
 
 .item_one-title {
@@ -235,6 +252,246 @@
   font-weight: bold;
   margin-top: -5%;
 }
+.item_three-title {
+  font-family: Prompt-BoldItalic;
+  font-size: calc(1vw + 1vh);
+}
+.item_three-titletwo {
+  font-family: Prompt-BoldItalic;
+  font-size: calc(1vw + 1vh);
+  margin-top: -6%;
+}
+.item_three-titlethree {
+  background: -webkit-linear-gradient(10deg, #f86168, #feac40);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: Prompt-SemiBold;
+  font-size: calc(2.4vw + 1vh);
+  margin-top: -8%;
+}
+.item_three-titlefour {
+  font-family: Prompt-SemiBold;
+  font-size: calc(2.4vw + 1vh);
+  margin-top: -13%;
+  background: -webkit-linear-gradient(10deg, #f86168, #feac40);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.item_three-titlefive {
+  font-family: Prompt-SemiBold;
+  font-size: calc(0.34vw + 1vh);
+  margin-top: -6%;
+  text-align: center;
+}
+.item_three-imgmap {
+  max-width: 100%;
+  margin-top: 3%;
+}
+.item_three-box1 {
+  display: flex;
+  justify-content: space-evenly;
+  width: 45%;
+  padding: 1.4%;
+  color: #ffffff;
+  border-radius: 10px;
+  background: -webkit-linear-gradient(135deg, #046091, #62e4e2);
+}
+.item_three-box1 p {
+  margin: 0%;
+  font-family: Prompt-SemiBold;
+  font-size: calc(0.2vw + 1vh);
+}
+.box1 {
+  margin-top: 1%;
+}
+.item_three-text1 {
+  font-family: Prompt-BoldItalic;
+  font-size: calc(0.2vw + 1vh);
+  margin-top: 2%;
+  margin-bottom: 1%;
+  color: #24434f;
+}
+.item_three-box2 {
+  display: flex;
+  justify-content: space-between;
+  background: linear-gradient(to right, white 30%, #62e4e2, #046091 90%)
+    border-box;
+  border-radius: 15px;
+  margin-top: 3%;
+  font-family: Prompt-SemiBold;
+  font-size: calc(0.27vw + 1vh);
+}
+.item_three-box2-1 {
+  display: flex;
+  align-items: center;
+  width: 60%;
+  color: black;
+}
+
+.item_three-box2-text2 {
+  color: #ffffff;
+  padding-right: 5%;
+}
+.item_three-box2-icon {
+  margin-right: 2%;
+  filter: invert(75%) sepia(36%) saturate(528%) hue-rotate(129deg)
+    brightness(98%) contrast(96%);
+}
+.card-itemseven {
+  background-color: transparent;
+}
+.item_seven-card-title {
+  font-family: Prompt-ExtraBold;
+  color: #f86168;
+  font-size: 2.8rem;
+  text-shadow: 0px 3px 0px #046091;
+  margin-left: -8%;
+  margin-right: 3%;
+}
+.item_seven-card-titletwo {
+  font-family: Prompt-ExtraBold;
+  font-size: calc(0.5vw + 1vh);
+}
+.item_seven-card-body {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.item_seven-d1 {
+  display: flex;
+  padding: 2%;
+  font-family: Prompt-ExtraBold;
+  font-size: calc(0.24vw + 1vh);
+}
+.item_seven-d1text1 {
+  color: #046091;
+  border-right: 2px solid transparent;
+  border-image-slice: 1;
+  border-width: 5px;
+  border-image-source: linear-gradient(to top, #046091, #62e4e2);
+  width: 100%;
+}
+.item_seven-d1text2 {
+  color: #046091;
+  padding-left: 3%;
+  width: 100%;
+}
+.item_four-d1-select {
+  margin: 0% 4% 0% 5%;
+}
+#select1 {
+    border-radius: 55rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    font-size: 1.25rem;
+    color: #BDC3C6;
+    font-family: Prompt-Regular;
+    font-size: calc(1vw + 1vh);
+}
+.item_four-title {
+  background-color: #046091;
+  color: #ffffff;
+  border-radius: 35px;
+  font-size: calc(1vw + 1vh);
+  font-family: Prompt-SemiBold;
+  text-align: center;
+  padding: 2%;
+  margin: 8% 4% 0% 5%;
+}
+.item_four-textd1 {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 5%;
+}
+.item_four-textd1-d1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3%;
+}
+.item_four-textd1-1 {
+  font-family: Prompt-ExtraBold;
+  color: #ffffff;
+  font-size: 6rem;
+  text-shadow: 7px 8px 1px #046091;
+  margin: -20%;
+}
+.item_four-textd1-2 {
+  font-family: Prompt-ExtraBold;
+  color: black;
+  font-size: 1.3rem;
+  padding-left: 0.69%;
+}
+.item_four-textd1-3 {
+  font-family: Prompt-ExtraBold;
+  color: #f86168;
+  font-size: 1.5rem;
+  direction: rtl;
+  display: flex;
+  align-items: flex-end;
+}
+.item_four-textd2 {
+  background-color: #24434f;
+  color: #eaeaea;
+  font-size: 1.5rem;
+  height: 40%;
+  max-width: 100%;
+  margin-top: 5%;
+}
+.item_four-card-title {
+  font-family: Prompt-ExtraBold;
+  color: #f86168;
+  font-size: 3.7rem;
+  text-shadow: 0px 3px 0px #FEAC40;
+  margin-left: -8%;
+  margin-right: 3%;
+}
+.item_four-card-titletwo {
+  font-family: Prompt-ExtraBold;
+  font-size: calc(0.7vw + 1vh);
+}
+.item_four-card-body {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.item_four-card-bodytwo {
+  display: flex;
+  padding: 0% 3% 0% 3%;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Prompt-ExtraBold;
+  color: #046091;
+  font-size: calc(0.5vw + 1vh);
+}
+.item_eight-d1 {
+  display: flex;
+  padding: 2%;
+  font-family: Prompt-ExtraBold;
+  font-size: calc(0.24vw + 1vh);
+  background-color: #ffffff;
+  border-radius: 15px;
+}
+.item_eight-d1text1 {
+  color: #046091;
+  width: 100%;
+}
+.item_eight-d1text2 {
+  color: #046091;
+  padding-left: 3%;
+  width: 100%;
+  direction: rtl;
+}
+.item_eight-hr {
+  height: 6px;
+  margin: -3% 2% 0% 2%;
+  background: -webkit-linear-gradient(10deg, #046091, #62e4e2);
+  border-radius: 5px;
+  border-top: 0px;
+  opacity: 100%;
+}
+
 @media (max-width: 800px) {
   #container {
     grid-template-columns: 1fr;
