--- a/index.css
+++ b/index.css
@@ -144,6 +144,8 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
+  width: 100%;
+  height: max-content;
 }
 
 .two img {
@@ -189,6 +191,7 @@
 .six {
   grid-column-start: 2;
   grid-row: 2 / 4;
+  width: 100%;
 }
 
 .seven {
@@ -202,6 +205,8 @@
   width: 100%;
   margin-top: -20%;
   height: max-content;
+  background-color: #ffffff;
+  border-radius: 15px;
 }
 
 .nine {
@@ -449,7 +454,7 @@
 }
 .item_four-card-titletwo {
   font-family: Prompt-ExtraBold;
-  font-size: calc(0.7vw + 1vh);
+  font-size: calc(0.8vw + 1vh);
 }
 .item_four-card-body {
   display: flex;
@@ -470,10 +475,10 @@
   padding: 2%;
   font-family: Prompt-ExtraBold;
   font-size: calc(0.24vw + 1vh);
-  background-color: #ffffff;
   border-radius: 15px;
 }
 .item_eight-d1text1 {
+  font-size: calc(0.5vw + 1vh);
   color: #046091;
   width: 100%;
 }
@@ -491,7 +496,46 @@
   border-top: 0px;
   opacity: 100%;
 }
-
+.item_six-title {
+  background-color: #ffffff;
+  text-align: center;
+  border-radius: 50px;
+  padding: 1%;
+  font-family: Prompt-ExtraBold;
+  font-size: calc(0.7vw + 1vh);
+  border: 4px solid ;
+  /* border-image-slice: 1;
+  border-image-source: linear-gradient(to right, #046091, #62e4e2 ); */
+  background: linear-gradient(white, white) padding-box,
+              linear-gradient(to right, #046091, #62e4e2) border-box;
+  border-radius: 50em;
+  border: 4px solid transparent;
+}
+.item_six-text1 {
+  font-family: Prompt-ExtraBold;
+  font-size: calc(0.3vw + 1vh);
+  text-align: center;
+  margin-top: 2%;
+}
+.item_six-card-body {
+    display: flex;
+    align-items: center;
+    max-width: 100%;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+.item_six-d1-img-1 {
+  max-width: 100%;
+  padding: 5%;
+}
+.item_six-img-1 {
+  height: 35px;
+}
+.item_six-d1 {
+  max-width: 290px;
+  padding: 3%;
+}
 @media (max-width: 800px) {
   #container {
     grid-template-columns: 1fr;
