--- a/index.css
+++ b/index.css
@@ -511,11 +511,15 @@
   border-radius: 50em;
   border: 4px solid transparent;
 }
+.item_six-titletwo {
+  text-align: center;
+}
 .item_six-text1 {
   font-family: Prompt-ExtraBold;
   font-size: calc(0.3vw + 1vh);
   text-align: center;
   margin-top: 2%;
+  margin-bottom: 0%;
 }
 .item_six-card-body {
     display: flex;
@@ -530,11 +534,44 @@
   padding: 5%;
 }
 .item_six-img-1 {
-  height: 35px;
+  filter: invert(89%) sepia(12%) saturate(105%) hue-rotate(155deg) brightness(89%) contrast(83%);
+  width: 30px;
+  height: 25px;
+}
+.item_six-img-2 {
+  filter: invert(64%) sepia(90%) saturate(4164%) hue-rotate(320deg) brightness(98%) contrast(98%);  
+  width: 30px;
+  height: 25px;
+}
+.item_six-img-3 {
+  filter: invert(17%) sepia(81%) saturate(3098%) hue-rotate(185deg) brightness(100%) contrast(97%);  
+  width: 30px;
+  height: 25px;
 }
 .item_six-d1 {
-  max-width: 290px;
-  padding: 3%;
+    width: 170px;
+    padding: 3%;
+}
+.item_six-subtext1 {
+  color: #24434f;
+  font-family: Prompt-BoldItalic;
+  font-size: calc(0.2vw + 1vh);
+}
+.item_six-subtext2 {
+  color: #f86168;
+  font-family: Prompt-ExtraBold;
+  font-size: calc(2.8vw + 1vh);
+  text-shadow: 2px 3px 0px rgba(98, 228, 226, 0.24);
+  margin-bottom: 0%;
+  margin-top: -5%;
+}
+.item_six-subtext3 {
+  color: #f86168;
+  font-family: Prompt-ExtraBold;
+  font-size: calc(0.9vw + 1vh);
+  text-shadow: 2px 3px 0px rgba(98, 228, 226, 0.24);
+  margin-bottom: 0%;
+  margin-top: -5%;
 }
 @media (max-width: 800px) {
   #container {
